manifests/deployments/sciety-labs/sciety-labs--prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sciety-labs--prod
  labels:
    app: sciety-labs--prod
  namespace: data-hub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sciety-labs--prod
      app.kubernetes.io/name: sciety-labs
      app.kubernetes.io/instance: sciety-labs--prod
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app: sciety-labs--prod
        app.kubernetes.io/name: sciety-labs
        app.kubernetes.io/instance: sciety-labs--prod
        app.kubernetes.io/component: web
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: us-east-1c
      containers:
        - name: sciety-labs
          image: ghcr.io/sciety/sciety-labs:0.0.101 # {"$imagepolicy": "data-hub:sciety-labs-stable"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            timeoutSeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            timeoutSeconds: 5
            periodSeconds: 30
          startupProbe:
            httpGet:
              path: /
              port: http
            timeoutSeconds: 5
            periodSeconds: 30
            failureThreshold: 10
          resources:
            limits:
              memory: 2560Mi
            requests:
              cpu: 250m
              memory: 2048Mi
              ephemeral-storage: 50Mi
          volumeMounts:
            - name: gcp-credentials-sealed-secret-volume
              mountPath: /root/.gcp
              readOnly: true
            - name: twitter-api-secret-volume
              mountPath: /root/.secrets/twitter_api/
              readOnly: true
            - name: semantic-scholar-secret-volume
              mountPath: /root/.secrets/semantic_scholar/
              readOnly: true
            - name: opensearch-secret-volume
              mountPath: /root/.secrets/opensearch/
              readOnly: true
            - name: cache-storage
              mountPath: /app/sciety-labs/.cache
      volumes:
        - name: gcp-credentials-sealed-secret-volume
          secret:
            secretName: gcloud
        - name: twitter-api-secret-volume
          secret:
            secretName: twitter-api
        - name: semantic-scholar-secret-volume
          secret:
            secretName: semantic-scholar
        - name: opensearch-secret-volume
          secret:
            secretName: opensearch-staging-admin-password
        - name: cache-storage
          ephemeral:
            volumeClaimTemplate:
              spec:
                accessModes: ["ReadWriteOnce"]
                storageClassName: sciety-gp3
                resources:
                  requests:
                    storage: 15Gi
---
apiVersion: v1
kind: Service
metadata:
  name: sciety-labs--prod
  namespace: data-hub
spec:
  selector:
    app: sciety-labs--prod
  ports:
    - port: 8000
  trafficDistribution: PreferClose
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sciety-labs--prod
  namespace: data-hub
  labels:
    app: sciety-labs--prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: traefik
  rules:
    - host: labs.sciety.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sciety-labs--prod
                port:
                  number: 8000
  tls:
    - hosts:
        - labs.sciety.org
      secretName: sciety-labs-prod-tls
