manifests/deployments/sciety-labs/sciety-labs--stg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sciety-labs--stg
  labels:
    app: sciety-labs--stg
  namespace: data-hub
spec:
  selector:
    matchLabels:
      app: sciety-labs--stg
      app.kubernetes.io/name: sciety-labs
      app.kubernetes.io/instance: sciety-labs--stg
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app: sciety-labs--stg
        app.kubernetes.io/name: sciety-labs
        app.kubernetes.io/instance: sciety-labs--stg
        app.kubernetes.io/component: web
    spec:
      containers:
      - name: sciety-labs
        image: ghcr.io/sciety/sciety-labs_unstable:main-e98fe575-20260812.0948 # {"$imagepolicy": "data-hub:sciety-labs-unstable"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          timeoutSeconds: 5
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: http
          timeoutSeconds: 5
          periodSeconds: 30
        startupProbe:
          httpGet:
            path: /
            port: http
          timeoutSeconds: 5
          periodSeconds: 30
          failureThreshold: 10
        resources:
          limits:
            memory: 2048Mi
          requests:
            cpu: 250m
            memory: 1024Mi
            ephemeral-storage: 50Mi
        volumeMounts:
        - name: gcp-credentials-sealed-secret-volume
          mountPath: /root/.gcp
          readOnly: true
        - name: twitter-api-secret-volume
          mountPath: /root/.secrets/twitter_api/
          readOnly: true
        - name: semantic-scholar-secret-volume
          mountPath: /root/.secrets/semantic_scholar/
          readOnly: true
        - name: opensearch-secret-volume
          mountPath: /root/.secrets/opensearch/
          readOnly: true
        - name: cache-storage
          mountPath: /app/sciety-labs/.cache
      volumes:
      - name: gcp-credentials-sealed-secret-volume
        secret:
          secretName: gcloud
      - name: twitter-api-secret-volume
        secret:
          secretName: twitter-api
      - name: semantic-scholar-secret-volume
        secret:
          secretName: semantic-scholar
      - name: opensearch-secret-volume
        secret:
          secretName: opensearch-staging-admin-password
      - name: cache-storage
        ephemeral:
          volumeClaimTemplate:
            spec:
              accessModes: ["ReadWriteOnce"]
              storageClassName: sciety-gp3
              resources:
                requests:
                  storage: 15Gi
---
apiVersion: v1
kind: Service
metadata:
  name: sciety-labs--stg
  namespace: data-hub
spec:
  selector:
    app: sciety-labs--stg
  ports:
  - port: 8000
  trafficDistribution: PreferClose
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sciety-labs--stg
  namespace: data-hub
  labels:
    app: sciety-labs--stg
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-deny-robots@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: labs--stg.sciety.org
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: sciety-labs--stg
                port:
                  number: 8000
  tls:
    - hosts:
        - labs--stg.sciety.org
      secretName: labs--stg.sciety.org-tls
